Added aspects, consequences and tabs

--- a/style/components.scss
+++ b/style/components.scss
@@ -1,5 +1,10 @@
 @import "components/desk/desk.scss";
-@import "components/sheet/sheet.scss";
 @import "components/artwork/artwork.scss";
 @import "components/stress/stress.scss";
 @import "components/header/header.scss";
+@import "components/footer/footer.scss";
+@import "components/headline/headline.scss";
+@import "components/aspects/aspects.scss";
+@import "components/consequences/consequences.scss";
+@import "components/tabs/tabs.scss";
+@import "components/input/input.scss";
