--- a/style/components/header/header.scss
+++ b/style/components/header/header.scss
@@ -39,6 +39,7 @@
     color: $header-font-color;
     padding-left: $component-padding / 2;
     padding-top: 3px;
+    white-space: nowrap;
 }
 
 .fatex__header__label--center {
