--- a/style/mixins.scss
+++ b/style/mixins.scss
@@ -1,6 +1,14 @@
-@mixin cutoff($size: 10px) {
-    clip-path: polygon(0 $size, $size 0%, 100% 0%, 100% 0%, 100% calc(100% - #{$size}), calc(100% - #{$size}) 100%, 0 100%, 0 100%);
+@mixin cutoff($size: 10px, $onlytop: 0) {
+
+    @if $onlytop == 0 {
+        clip-path: polygon(0 $size, $size 0%, 100% 0%, 100% 0%, 100% calc(100% - #{$size}), calc(100% - #{$size}) 100%, 0 100%, 0 100%);
+    }
+
+    @if $onlytop == 1 {
+        clip-path: polygon(0 0, calc(100% - #{$size}) 0, 100% calc(100% - #{$size}), 100% 100%, 0 100%);
+    }
 }
+
 
 @mixin fa-icon($icon_name) {
     &:before {
