--- a/style/sheet.scss
+++ b/style/sheet.scss
@@ -10,6 +10,10 @@
         background: $sheet-background;
     }
 
+    a:hover {
+        text-shadow: none;
+    }
+
     img {
         border: 0
     }
