--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,6 @@
 @import "settings.scss";
 @import "mixins.scss";
 @import "fonts.scss";
+@import "sheet.scss";
 @import "fontawesome.scss";
 @import "components.scss";
