--- a/system/templates/actors/parts/sidebar/stress.html
+++ b/system/templates/actors/parts/sidebar/stress.html
@@ -1,8 +1,8 @@
 <div class="fatex__stress">
     <div class="fatex__stress__track">
-        <h2 class="fatex__stress__track__headline">
-            Physical stress
-            <span class="fatex__stress__track__headline__settings"></span>
+        <h2 class="fatex__headline">
+            <span>Physical stress</span>
+            <span class="fatex__headline__settings"></span>
         </h2>
 
         <div class="fatex__stress__track__items">
@@ -41,9 +41,9 @@
     </div>
 
     <div class="fatex__stress__track">
-        <h2 class="fatex__stress__track__headline">
-            Stress track with lots of text
-            <span class="fatex__stress__track__headline__settings"></span>
+        <h2 class="fatex__headline">
+            <span>Stress track with lots of text</span>
+            <span class="fatex__headline__settings"></span>
         </h2>
 
         <div class="fatex__stress__track__items fatex__stress__track__items__break">
@@ -116,9 +116,9 @@
     </div>
 
     <div class="fatex__stress__track">
-        <h2 class="fatex__stress__track__headline">
-            Indebted
-            <span class="fatex__stress__track__headline__settings"></span>
+        <h2 class="fatex__headline">
+            <span>Indebted</span>
+            <span class="fatex__headline__settings"></span>
         </h2>
 
         <div class="fatex__stress__track__items">
