Item management, stress tracks, custom labels and more

--- a/style/components.scss
+++ b/style/components.scss
@@ -8,3 +8,7 @@
 @import "components/consequences/consequences.scss";
 @import "components/tabs/tabs.scss";
 @import "components/input/input.scss";
+@import "components/sheet/sheet.scss";
+@import "components/sheet/item-sheet.scss";
+@import "components/dialog/dialog.scss";
+@import "components/settings/settings.scss";
