--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @import "settings.scss";
-@import "mixins.scss";
-@import "fonts.scss";
-@import "sheet.scss";
-@import "fontawesome.scss";
+
+@import "extras/mixins";
+@import "extras/fonts";
+@import "extras/fontawesome";
+
 @import "components.scss";
