--- a/system/templates/actor/parts/sidebar/stress.html
+++ b/system/templates/actor/parts/sidebar/stress.html
@@ -1,168 +1,22 @@
 <div class="fatex__stress">
-    <div class="fatex__stress__track">
-        <h2 class="fatex__headline">
-            <span>Physical stress</span>
-            <span class="fatex__headline__settings"></span>
-        </h2>
-
-        <div class="fatex__stress__track__items">
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">1</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">2</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">3</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">4</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-        </div>
-    </div>
-
-    <div class="fatex__stress__track">
-        <h2 class="fatex__headline">
-            <span>Stress track with lots of text</span>
-            <span class="fatex__headline__settings"></span>
-        </h2>
-
-        <div class="fatex__stress__track__items fatex__stress__track__items__break">
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">1</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">2</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">3</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">4</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__break"></div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">5</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">6</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">7</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <span class="fatex__stress__track__item__label">8</span>
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-        </div>
-    </div>
-
-    <div class="fatex__stress__track">
-        <h2 class="fatex__headline">
-            <span>Indebted</span>
-            <span class="fatex__headline__settings"></span>
-        </h2>
-
-        <div class="fatex__stress__track__items">
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-
-            <div class="fatex__stress__track__item">
-                <label class="fatex__stress__track__item__box">
-                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <span class="fatex__stress__track__item__icon"></span>
-                </label>
-            </div>
-        </div>
-    </div>
-
-    {{#each actor.stress as |stress stressIndex|}}
+    {{#each stress as |stress stressIndex|}}
         <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}}">
             <h2 class="fatex__headline">
                 <span>{{stress.name}}</span>
-                <span class="fatex__stress__settings fatex__headline__settings" data-item="{{stress._id}}"></span>
+                <div class="fatex__headline__actions">
+                    <span class="fatex__headline__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
+                    <span class="fatex__headline__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
+                </div>
             </h2>
 
             <div class="fatex__stress__track__items fatex__stress__track__items__break">
-                {{#each stress.boxes as |box boxIndex|}}
+                {{#each stress.data.boxes as |box boxIndex|}}
                     <div class="fatex__stress__track__item">
-                        <label class="fatex__stress__track__item__box" data-item="{{stress._id}}">
+                        <label
+                                class="fatex__stress__track__item__box"
+                                data-index="{{boxIndex}}"
+                                data-item="{{stress._id}}"
+                        >{{log stress}}
                             <span class="fatex__stress__track__item__label">{{box.label}}</span>
                             <input class="fatex__stress__track__item__checkbox" type="checkbox"{{#if box.isChecked}}
                                    checked="checked"{{/if}}>
@@ -179,7 +33,7 @@
     {{/each}}
 
 
-    <button class="fatex__stress__button--add">
+    <button class="fatex__stress__add">
         Add stress track
     </button>
 
